# ml-bootcamp-monorepo

./: README.md  pyproject.toml
phase-01-karpathy/01-micrograd/: micrograd.ipynb
